# mangofetch-gui

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  cargo-deny.toml
.github/workflows/: ci.yml  integration-tests.yml  release.yml  security.yml
docs/wiki/: Architecture.md  CLI-Guide.md  Configuration.md  Home.md  Installation.md  P2P-Sharing.md  Platforms.md  Plugin-Development.md  Quick-Start.md  TUI-Experience.md  _Sidebar.md
installers/scoop/: mangofetch.json
installers/winget/: julesklord.mangofetch.yaml
mangofetch-gui/: Cargo.toml
mangofetch-gui/src/: app.rs  bridge.rs  lib.rs  main.rs  runtime.rs  theme.rs  widgets.rs
scripts/: daily_test.py  test_state.json  test_urls.json
