[workspace]
resolver = "2"
members = ["mangofetch-gui"]

# This makes 'cargo run' from root execute the GUI by default
default-members = ["mangofetch-gui"]

[profile.dev]
debug = 0
codegen-units = 256
incremental = true

[profile.dev.package."*"]
debug = false
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
