[package]
name = "mangofetch-gui"
version = "0.1.0"
edition = "2021"
description = "Graphical interface for MangoFetch download manager (egui + eframe)"
authors = ["Jules Martins <TU_ID+julesklord@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/julesklord/mangofetch-gui"
readme = "../README.md"
keywords = ["mangofetch", "downloader", "gui", "video", "egui"]
categories = ["gui", "multimedia"]

[[bin]]
name = "mangofetch-gui"
path = "src/main.rs"

[dependencies]
mangofetch-core = { version = "0.7.4", features = [
    "platforms",
] }
eframe = { version = "0.31", features = ["default_fonts", "persistence"] }
egui = "0.34"
egui_extras = { version = "0.31", features = ["all_loaders"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.30"
rfd = "0.17.2"
